Problem set one completion for unit 5. Folders created for the remaining units

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@ unit_1/exams/
 unit_2/exams/
 unit_3/exams/
 unit_4/exams/
+unit_5/exams/
+unit_6/exams/
+unit_7/exams/
+unit_8/exams/
+unit_9/exams/
+unit_10/exams/
 .DS_Store
